--- a/roles/openshift_node/tasks/main.yml
+++ b/roles/openshift_node/tasks/main.yml
@@ -80,7 +80,7 @@
 - name: Reload systemd units
   command: systemctl daemon-reload
   when: openshift.common.is_containerized and ( ( install_node_result  | changed )
-    or ( install_ovs_result | changed ) )
+    or ( install_ovs_sysconfig | changed ) )
 
 - name: Start and enable openvswitch docker service
   service: name=openvswitch.service enabled=yes state=started
