Add cockpit-docker package by default

--- a/roles/cockpit/tasks/main.yml
+++ b/roles/cockpit/tasks/main.yml
@@ -5,6 +5,7 @@
     - cockpit-ws
     - cockpit-shell
     - cockpit-bridge
+    - cockpit-docker
     - "{{ cockpit_plugins }}"
   when: not openshift.common.is_containerized | bool
 
