--- a/playbooks/common/openshift-master/config.yml
+++ b/playbooks/common/openshift-master/config.yml
@@ -29,8 +29,8 @@
                                        | oo_collect('openshift.common.hostname')
                                        | default(none, true) }}"
   - set_fact:
-      use_cluster_metrics_hawkular: "{{ lookup('oo_option', 'use_cluster_metrics_hawkular') | default(false, true) }}"
-    when: use_cluster_metrics_hawkular is not defined
+      use_openshift_metrics: "{{ lookup('oo_option', 'use_openshift_metrics') | default(false, true) }}"
+    when: use_openshift_metrics is not defined
     
   roles:
   - openshift_facts
