--- a/playbooks/adhoc/uninstall.yml
+++ b/playbooks/adhoc/uninstall.yml
@@ -55,7 +55,7 @@
 
     - name: Stop additional atomic services
       service: name={{ item }} state=stopped
-      when: is_atomic | bool
+      when: is_containerized | bool
       with_items:
         - etcd_container
       failed_when: false
