--- a/roles/openshift_node/tasks/main.yml
+++ b/roles/openshift_node/tasks/main.yml
@@ -47,12 +47,12 @@
 
 - name: Pull node image
   command: >
-    docker pull {{ openshift.node.node_image }}
+    docker pull {{ openshift.node.node_image }}:{{ openshift_version }}
   when: openshift.common.is_containerized | bool
 
 - name: Pull OpenVSwitch image
   command: >
-    docker pull {{ openshift.node.ovs_image }}
+    docker pull {{ openshift.node.ovs_image }}:{{ openshift_version }}
   when: openshift.common.is_containerized | bool and openshift.common.use_openshift_sdn | bool
 
 - name: Install Node docker service file
