--- a/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/pre.yml
+++ b/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/pre.yml
@@ -55,6 +55,7 @@
   tasks:
   - name: Clean package cache
     command: "{{ ansible_pkg_mgr }} clean all"
+    when: not openshift.common.is_atomic | bool
 
   - set_fact:
       g_new_service_name: "{{ 'origin' if deployment_type =='origin' else 'atomic-openshift' }}"
@@ -217,6 +218,7 @@
 
   - name: Install etcd (for etcdctl)
     action: "{{ ansible_pkg_mgr }} name=etcd state=latest"
+    when: not openshift.common.is_atomic | bool
 
   - name: Generate etcd backup
     command: >
