Bug 1315637 - The docker wasn't upgraded on node during upgrade

--- a/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/docker_upgrade.yml
+++ b/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/docker_upgrade.yml
@@ -1,6 +1,6 @@
 ---
 - name: Upgrade Docker
-  hosts: oo_masters_to_config
+  hosts: oo_masters_to_config:oo_nodes_to_config:oo_etcd_to_config
   vars:
     openshift_version: "{{ openshift_pkg_version | default('') }}"
   tasks:
