We require docker 1.9 for the 3.2 upgrade

--- a/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/pre.yml
+++ b/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/pre.yml
@@ -141,8 +141,7 @@
 
   - fail:
       msg: This playbook requires access to Docker 1.9 or later
-    when: not openshift.common.is_atomic | bool
-          and (g_docker_version.avail_version | default(g_docker_version.curr_version, true) | version_compare('1.9','<'))
+    when: g_docker_version.avail_version | default(g_docker_version.curr_version, true) | version_compare('1.9','<')
 
   # TODO: add check to upgrade ostree to get latest Docker
 
