--- a/playbooks/libvirt/openshift-cluster/terminate.yml
+++ b/playbooks/libvirt/openshift-cluster/terminate.yml
@@ -45,10 +45,16 @@
     - groups['oo_hosts_to_terminate']
     - [ destroy, undefine ]
 
-  - name: Delete VMs drives
+  - name: Delete VM drives
     command: 'virsh -c {{ libvirt_uri }} vol-delete --pool {{ libvirt_storage_pool }} {{ item }}.qcow2'
     args:
       removes: '{{ libvirt_storage_pool_path }}/{{ item }}.qcow2'
+    with_items: groups['oo_hosts_to_terminate']
+
+  - name: Delete VM docker drives
+    command: 'virsh -c {{ libvirt_uri }} vol-delete --pool {{ libvirt_storage_pool }} {{ item }}-docker.qcow2'
+    args:
+      removes: '{{ libvirt_storage_pool_path }}/{{ item }}-docker.qcow2'
     with_items: groups['oo_hosts_to_terminate']
 
   - name: Delete the VM cloud-init image
