--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Install docker
   action: "{{ ansible_pkg_mgr }} name=docker state=present"
   when: not openshift.common.is_atomic | bool
-  
+
 - name: enable and start the docker service
   service:
     name: docker
@@ -15,4 +15,4 @@
     docker_service_status_changed: start_result | changed
 
 - include: udev_workaround.yml
-  when: docker_udev_workaround | default(False)
+  when: docker_udev_workaround | default(False) | bool
