--- a/playbooks/byo/rhel_subscribe.yml
+++ b/playbooks/byo/rhel_subscribe.yml
@@ -1,12 +1,19 @@
 ---
-- hosts: all
-  vars:
-    openshift_deployment_type: "{{ deployment_type }}"
-  roles:
-  - role: rhel_subscribe
-    when: deployment_type in ['atomic-enterprise', 'enterprise', 'openshift-enterprise'] and
-          ansible_distribution == "RedHat" and
-          lookup('oo_option', 'rhel_skip_subscription') | default(rhsub_skip, True) |
-          default('no', True) | lower in ['no', 'false']
-  - openshift_repos
-  - os_update_latest
+- name: Populate oo_hosts_to_update group
+  hosts: localhost
+  connection: local
+  become: no
+  gather_facts: no
+  vars_files:
+  - openshift-cluster/cluster_hosts.yml
+  tasks:
+  - name: Evaluate oo_hosts_to_update
+    add_host:
+      name: "{{ item }}"
+      groups: oo_hosts_to_update
+      openshift_cluster_id: "{{ cluster_id | default('default') }}"
+      openshift_debug_level: 2
+      openshift_deployment_type: "{{ deployment_type }}"
+    with_items: "{{ g_all_hosts | default([]) }}"
+
+- include: ../common/openshift-cluster/update_repos_and_packages.yml
