--- a/playbooks/common/openshift-master/config.yml
+++ b/playbooks/common/openshift-master/config.yml
@@ -35,6 +35,14 @@
   - set_fact:
       openshift_master_debug_level: "{{ t_oo_option_master_debug_level }}"
     when: openshift_master_debug_level is not defined and t_oo_option_master_debug_level != ""
+    
+  - set_fact:
+      openshift_master_default_subdomain: "{{ lookup('oo_option', 'openshift_master_default_subdomain') | default(None) }}"
+    when: openshift_master_default_subdomain is not defined
+  - set_fact:
+      openshift_hosted_metrics_deploy: "{{ lookup('oo_option', 'openshift_hosted_metrics_deploy') | default(false, true) }}"
+    when: openshift_hosted_metrics_deploy is not defined
+    
   roles:
   - openshift_facts
   post_tasks:
