improve ordering of systemd units

--- a/roles/etcd/tasks/main.yml
+++ b/roles/etcd/tasks/main.yml
@@ -36,6 +36,10 @@
     state: stopped
     enabled: no
 
+- name: Mask system etcd when containerized
+  when: openshift.common.is_containerized | bool
+  command: systemctl mask etcd
+
 - name: Reload systemd units
   command: systemctl daemon-reload
   when: openshift.common.is_containerized | bool and ( install_etcd_result | changed )
