--- a/roles/openshift_node/tasks/main.yml
+++ b/roles/openshift_node/tasks/main.yml
@@ -85,6 +85,10 @@
 - name: Start and enable openvswitch docker service
   service: name=openvswitch.service enabled=yes state=started
   when: openshift.common.is_containerized | bool and openshift.common.use_openshift_sdn | bool
+  register: ovs_start_result
+
+- set_fact:
+    ovs_service_status_changed: "{{ ovs_start_result | changed }}"
 
 # TODO: add the validate parameter when there is a validation command to run
 - name: Create the Node config
@@ -134,7 +138,7 @@
 
 - name: Start and enable node
   service: name={{ openshift.common.service_type }}-node enabled=yes state=started
-  register: start_result
+  register: node_start_result
 
 - set_fact:
-    node_service_status_changed: "{{ start_result | changed }}"
+    node_service_status_changed: "{{ node_start_result | changed }}"
