Move common common facts to openshift_facts
- Prevents roles that need common facts from needing to require
  openshift_common, which pulls in the openshift binary.
- Add dependency on openshift_facts to os_firewall, since it uses
  openshift.common facts

--- a/playbooks/common/openshift-cluster/upgrades/v3_0_to_v3_1/upgrade.yml
+++ b/playbooks/common/openshift-cluster/upgrades/v3_0_to_v3_1/upgrade.yml
@@ -212,13 +212,10 @@
 
 - name: Update deployment type
   hosts: oo_masters_to_config:oo_nodes_to_config:oo_etcd_to_config
+  vars:
+    openshift_deployment_type: "{{ deployment_type }}"
   roles:
   - openshift_facts
-  post_tasks:
-  - openshift_facts:
-      role: common
-      local_facts:
-        deployment_type: "{{ deployment_type }}"
 
 - name: Update master facts
   hosts: oo_masters_to_config
