--- a/playbooks/common/openshift-master/config.yml
+++ b/playbooks/common/openshift-master/config.yml
@@ -39,33 +39,23 @@
   - openshift_facts
   post_tasks:
   - openshift_facts:
-      role: "{{ item.role }}"
-      local_facts: "{{ item.local_facts }}"
-    with_items:
-      - role: common
-        local_facts:
-          hostname: "{{ openshift_hostname | default(None) }}"
-          ip: "{{ openshift_ip | default(None) }}"
-          public_hostname: "{{ openshift_public_hostname | default(None) }}"
-          public_ip: "{{ openshift_public_ip | default(None) }}"
-          deployment_type: "{{ openshift_deployment_type }}"
-      - role: master
-        local_facts:
-          api_port: "{{ openshift_master_api_port | default(None) }}"
-          api_url: "{{ openshift_master_api_url | default(None) }}"
-          api_use_ssl: "{{ openshift_master_api_use_ssl | default(None) }}"
-          controllers_port: "{{ openshift_master_controllers_port | default(None) }}"
-          public_api_url: "{{ openshift_master_public_api_url | default(None) }}"
-          cluster_hostname: "{{ openshift_master_cluster_hostname | default(None) }}"
-          cluster_public_hostname: "{{ openshift_master_cluster_public_hostname | default(None) }}"
-          console_path: "{{ openshift_master_console_path | default(None) }}"
-          console_port: "{{ openshift_master_console_port | default(None) }}"
-          console_url: "{{ openshift_master_console_url | default(None) }}"
-          console_use_ssl: "{{ openshift_master_console_use_ssl | default(None) }}"
-          public_console_url: "{{ openshift_master_public_console_url | default(None) }}"
-          portal_net: "{{ openshift_master_portal_net | default(None) }}"
-          ha: "{{ openshift_master_ha | default(groups.oo_masters | length > 1) }}"
-          master_count: "{{ openshift_master_count | default(groups.oo_masters | length) }}"
+      role: master
+      local_facts:
+        api_port: "{{ openshift_master_api_port | default(None) }}"
+        api_url: "{{ openshift_master_api_url | default(None) }}"
+        api_use_ssl: "{{ openshift_master_api_use_ssl | default(None) }}"
+        controllers_port: "{{ openshift_master_controllers_port | default(None) }}"
+        public_api_url: "{{ openshift_master_public_api_url | default(None) }}"
+        cluster_hostname: "{{ openshift_master_cluster_hostname | default(None) }}"
+        cluster_public_hostname: "{{ openshift_master_cluster_public_hostname | default(None) }}"
+        console_path: "{{ openshift_master_console_path | default(None) }}"
+        console_port: "{{ openshift_master_console_port | default(None) }}"
+        console_url: "{{ openshift_master_console_url | default(None) }}"
+        console_use_ssl: "{{ openshift_master_console_use_ssl | default(None) }}"
+        public_console_url: "{{ openshift_master_public_console_url | default(None) }}"
+        portal_net: "{{ openshift_master_portal_net | default(None) }}"
+        ha: "{{ openshift_master_ha | default(groups.oo_masters | length > 1) }}"
+        master_count: "{{ openshift_master_count | default(groups.oo_masters | length) }}"
   - openshift_facts:
       role: hosted
       openshift_env:
