--- a/roles/openshift_node/tasks/main.yml
+++ b/roles/openshift_node/tasks/main.yml
@@ -126,7 +126,8 @@
   # Using curl here since the uri module requires python-httplib2 and
   # wait_for port doesn't provide health information.
   command: >
-    curl -k --silent {{ openshift_node_master_api_url }}/healthz/ready
+    curl --silent --cacert {{ openshift.common.config_base }}/node/ca.crt
+    {{ openshift_node_master_api_url }}/healthz/ready
   register: api_available_output
   until: api_available_output.stdout == 'ok'
   retries: 120
