--- a/playbooks/common/openshift-cluster/update_repos_and_packages.yml
+++ b/playbooks/common/openshift-cluster/update_repos_and_packages.yml
@@ -5,8 +5,10 @@
   roles:
   - role: rhel_subscribe
     when: deployment_type in ["enterprise", "atomic-enterprise", "openshift-enterprise"] and
-          ansible_distribution == "RedHat" and
-          lookup('oo_option', 'rhel_skip_subscription') | default(rhsub_skip, True) |
-            default('no', True) | lower in ['no', 'false']
+          ansible_distribution == "RedHat" and not ( openshift_rhel_skip_subscription |
+          default(lookup('oo_option', 'rhel_skip_subscription')) | default(rhsub_skip) |
+          default(False) | bool )
   - openshift_repos
-  - os_update_latest
+  - role: os_update_latest
+    when: not (openshift_skip_pkg_update | default(lookup('oo_option', 'skip_pkg_update')) |
+          default(False) | bool or openshift.common.is_containerized)
