Bug 1320829 - Ensure docker installed for facts
- gather facts requiring docker only if docker is present and running
- Update reference to etcd role in playbooks/common/openshift-etcd/config.yml
  to use openshift_etcd

--- a/playbooks/common/openshift-etcd/config.yml
+++ b/playbooks/common/openshift-etcd/config.yml
@@ -103,7 +103,7 @@
       dest: "{{ etcd_cert_config_dir }}"
     when: etcd_server_certs_missing
   roles:
-  - etcd
+  - openshift_etcd
   - role: nickhammond.logrotate
 
 - name: Delete temporary directory on localhost
