--- a/roles/etcd/tasks/main.yml
+++ b/roles/etcd/tasks/main.yml
@@ -39,7 +39,8 @@
 - name: Check for etcd service presence
   command: systemctl show etcd.service
   register: etcd_show
-  
+  changed_when: false
+
 - name: Mask system etcd when containerized
   when: openshift.common.is_containerized | bool and 'LoadState=not-found' not in etcd_show.stdout
   command: systemctl mask etcd
